# folio

./: .env  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  Procfile.dev  README.md  atlas.hcl  build.rs  config.github-actions.toml  db_init.sh  flake.nix  package-lock.json  rebar.config  relx.config  renovate.json  shell.nix  sys.config
.github/workflows/: docker-build.yml  erlang.yml  pull_request.yml  push_main.yml  r-javascript.yml  release.yml
.sqlx/: query-0126c4add0bab0a0876072392da63248cb212aeb64a8467edb111b8760c3843d.json  query-040d557994b394759535c031c2e48ac71bc1f3d30cf3298b812558d0403cce9d.json  query-0e1a3c7bb416bcd3ccab7fb59559b19ffff63cb904a880ef13b3a1f993bd5aef.json  query-0f30e9cc852727a7cb618b9a6d2b1748daba1dcab4bba89742c221b9995dd6ba.json  query-1990890a56bea33cb274a2421c72cb5487f63bd33b035413abf58a47c73c9e8a.json  query-3ba8eb859a428dd987b91c4384d7558aa870df2ed7373df900edc82500d0ca76.json  query-5fa3f4f7c3c2d56a0678939839edad2240f49a2fca7bc4cad650f4111efff606.json  query-7772e3616ef43f85b4a19745252d381266b8ba3691f8db3d368d21c882f8830b.json  query-9cbd29db09d3457d63eea16da4bf5c863d0dde4fef5d42a3f3f85a84511d7c94.json  query-a11e575373dffd1047af2220aa3f8ea05aac312755236a1502e559e943c2ef05.json  query-ad7c659b8e793c4189804f1291c02daee15430ffd54c77a50b897a78c4f04c4a.json  query-ae62f9914bfb312edfb1f809eb51aaaf857de632bbc0a5408f76402215124198.json  query-b33c3044ba0c6d0a52b1b43e0f624e0b1d68b0e16221a88dc1e4cd794a8cd9c4.json  query-b3ad3c25cbefa12f4dd5757899fc49d44008181b12cd7612575e9eae7fcdf31f.json  query-bd7836b63ee2da5daedca6fd24291711a78f92c11917cadb457dc30d370c9e96.json  query-d0b0a871445cede9df2d958fc0becc4a357cd22ab322f5b339dccb05a4f2067f.json  query-dbb7cd489c04cdd93521e4588b4b81a6206ce3bb56683ca0697c053536620623.json  query-e85d1e8d757dde4586f3d92a4ffd84f9eca492fe9d4d0147ad573601368e771c.json  query-eed6ed749415bf68e677fe0f7dc4a32482a7ab0bf4e2210459587f68e12e8313.json
config/: sys.config.src  vm.args
priv/public/: index.html
schema/: external_connections.hcl  schema.sql  schema_public.hcl  user.hcl
src/: accounts.rs  bi.erl  binary_join.erl  coingecko.erl  config.rs  dates.rs  external.rs  fdb.erl  files.rs  folio.app.src  folio_account_provider.erl  folio_accounts.erl  folio_app.erl  folio_assets.erl  folio_blockstream.erl  folio_chain_accounts.erl  folio_coinbase_api.erl  folio_coinbase_pro_api.erl  folio_coingecko.erl  folio_config.erl  folio_credentials_store.erl  folio_cryptowatch.erl  folio_data.erl  folio_ethplorer.erl  folio_exchange_integration.erl  folio_fetcher.erl  folio_gemini_api.erl  folio_handler_account_add.erl  folio_handler_accounts.erl  folio_handler_assets.erl  folio_handler_balance.erl  folio_handler_holdings.erl  folio_handler_integration_accounts.erl  folio_handler_integration_add.erl  folio_handler_integration_delete.erl  folio_handler_integration_sync.erl  folio_handler_integrations.erl  folio_handler_integrations_add.erl  folio_handler_transactions.erl  folio_http.erl  (+18 more)
static/: style.css
tailwind/: input.css
test/: fdb_test.erl  folio_assets_test.erl  folio_blockstream_test.erl  folio_coinbase_pro_api_test.erl  folio_coingecko_test.erl  folio_cryptowatch_test.erl  folio_ethplorer_test.erl  folio_fetcher_test.erl  folio_gemini_api_test.erl  folio_http_test.erl  folio_integration_test.erl  folio_loopring_test.erl  folio_meck.erl
ui/: README.md  package-lock.json  package.json  rollup.config.js  tailwind.config.cjs  tailwind.config.js
ui/src/: AccountList.svelte  App.svelte  AssetList.svelte  Balance.svelte  BoxContent.svelte  BoxSidebar.svelte  Button.svelte  FilterButton.svelte  Integration.svelte  IntegrationList.svelte  IntegrationSetup.svelte  Login.svelte  Table.svelte  TableElementTime.svelte  TransactionList.svelte  main.js
