[package]
name = "folio"
version = "0.0.1"
edition = "2021"
description = "Crypto portfolio"
license = "Apache-2.0"
publish = false

[[bin]]
name = "folio-migrate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
axum = { version = "0.7.5", features = ["macros"]}
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive", "env"]}
maud = { version = "0.26.0", features = ["axum"] }
futures = "0.3.30"
tower-cookies = { version = "0.10.0", features = ["signed", "private"]}
tower-http = { version = "0.5.2", features = ["tracing", "trace", "compression-gzip"] }
once_cell = "1.19.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37.0", features = ["full"]}
toml = "0.8.12"
tracing = "0.1.40"

url = "2.5.0"
signal-hook = "0.3.17"
service_conventions = { version = "0.0.16", features = ["tracing", "oidc"]}
sqlx = { version = "0.7.4", features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "uuid", "time", "chrono", "rust_decimal"] }
base64 = "0.22.0"
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
thiserror = "1.0.59"
rust_decimal = { version = "1.35.0", features = ["db-postgres", "serde-float"] }
axum-extra = { version = "0.9.3", features = ["query"] }
http = "1.1.0"
serde_qs = "0.13.0"
chronoutil = "0.2.6"

rust-embed = { version = "8.3.0", features = ["axum", "mime-guess", "mime_guess"] }
axum-embed = "0.1.0"
aes-gcm-siv = "0.11.1"
aead = "0.5.2"
bitcoin = { version = "0.31.0", features = ["serde"] }
generic-array = "1.0.0"
serde_arrays = "0.1.0"
serde_with = { version = "3.8.1", features = ["hex", "base64"] }
rust_decimal_macros = "1.34.2"

sqlparser = { version="0.46.0", git = "https://github.com/philipcristiano/sqlparser-rs.git", branch = "main"}
declare_schema = { git = "https://github.com/philipcristiano/declare-schema.git", branch = "main"}

