[package]
name = "folio"
version = "0.0.1"
edition = "2024"
description = "Crypto portfolio"
license = "Apache-2.0"
publish = false

[[bin]]
name = "folio-migrate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
axum = { version = "0.8", features = ["macros", "multipart"]}
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive", "env"]}
maud = { version = "0.27.0", features = ["axum"] }
futures = "0.3.30"
tower-cookies = { version = "0.11.0", features = ["signed", "private"]}
tower-http = { version = "0.6", features = ["tracing", "trace", "compression-gzip"] }
once_cell = "1.19.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37.0", features = ["full"]}
toml = "1.0.0"
tracing = "0.1.40"

url = "2.5.0"
signal-hook = "0.4.0"
service_conventions = { version = "0.0.32", features = ["tracing", "oidc", "tracing-http"]}
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "uuid", "chrono", "rust_decimal"] }
base64 = "0.22.0"
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
thiserror = "1.0.59"
rust_decimal = { version = "1.35.0", features = ["db-postgres", "serde-float"] }
axum-extra = { version = "0.12.0", features = ["query"] }
http = "1.1.0"
serde_qs = "0.15.0"
chronoutil = "0.2.6"

rust-embed = { version = "8.3.0", features = ["axum", "mime-guess", "mime_guess"] }
axum-embed = "0.1.0"
aes-gcm-siv = "0.11.1"
aead = "0.5.2"
bitcoin = { version = "0.32.0", features = ["serde"] }
generic-array = "1.0.0"
serde_arrays = "0.2.0"
serde_with = { version = "3.8.1", features = ["hex", "base64"] }
rust_decimal_macros = "1.34.2"

sqlparser = { version="0.61.0"}
declare_schema = { version = "0.0.12" }

